# Nelly

./: README.md  pyproject.toml
docs/: get-pcap.md
nelly/: get_pcap.py
tests/: test_nelly.py
