[tool.poetry]
name = "Nelly"
version = "0.1.0"
description = ""
authors = ["h4ndzdatm0ld <hugotinoco@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
netmiko = "^4.1.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
